# contextswitch-web

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs
src/components/: add_task.rs  mod.rs  task_item.rs  tasks_list.rs
src/templates/: list_tasks.rs  mod.rs
