[package]
name = "contextswitch-web"
version = "0.1.0"
edition = "2021"
authors = ["David Rousselie <david@rousselie.name>"]

[dependencies]
contextswitch-types = { git = "https://github.com/dax/contextswitch-types.git" }
perseus = { version = "0.3.0", features = ["hydrate"] }
sycamore = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2.4.0"
reqwasm = "0.4.0"
wasm-bindgen = "0.2.0"
serde-wasm-bindgen = "0.4.0"
console_log = { version = "0.2", features = ["color"] }
log = "0.4.0"
perseus-size-opt = "0.1.0"

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent"]
version = "0.3.55"
